--- a/TapatApp/Readme.html
+++ b/TapatApp/Readme.html
@@ -7,7 +7,11 @@
 # Tapat APP
 
 ## Requisitos Funcionales
-
+### <u>RF1 Login/Autenticació</u>
+- Tots els Users
+- Actors: Admin,Metges, Tutors, Cuidadors, Infant
+### <u>RF2 Registre Usuari TUTOR</u>
+- Actors
 ## Descripcion del Proyecto
 - L’objectiu de TapatApp consisteix en proporcionar a totes les famílies afectades per cataracta congènita, o qualsevol patologia
 - que faci servir pedaç ocular, una eina senzilla i gratuïta que els ajudi a portar aquest tractament de la forma
